Securité fonctionnelle. amélioration du front et rajout des classements, page admin, page profile